tests/purs/failing/UnderscoreModuleName.purs
-- @shouldFailWith ErrorParsingModule
module Bad_Module where

import Effect.Console (log)

main = log "Done"
